<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/recommendFragment">

    <fragment
        android:id="@+id/recommendFragment"
        android:name="com.sjtu.hupu.Fragment.RecommendFragment"
        android:label="@string/recommend"
        tools:layout="@layout/recommend_fragment" />
    <fragment
        android:id="@+id/matchFragment"
        android:name="com.sjtu.hupu.Fragment.MatchFragment"
        android:label="@string/match"
        tools:layout="@layout/match_fragment" />
    <fragment
        android:id="@+id/communityFragment"
        android:name="com.sjtu.hupu.Fragment.CommunityFragment"
        android:label="@string/community"
        tools:layout="@layout/community_fragment" />
    <fragment
        android:id="@+id/channelFragment"
        android:name="com.sjtu.hupu.Fragment.ChannelFragment"
        android:label="@string/channel"
        tools:layout="@layout/channel_fragment" />
    <fragment
        android:id="@+id/moreFragment"
        android:name="com.sjtu.hupu.Fragment.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/more_fragment" />
</navigation>